--- a/src/blocks/contacts/contacts.pug
+++ b/src/blocks/contacts/contacts.pug
@@ -1,6 +1,6 @@
 mixin contacts(modifier)
   .contacts&attributes(attributes)
-    +contact('mail','justinfolly123@gmail.com')
-    +contact('phone','+1 (123) 456-7890')
+    +contact('mail','sash.verbin@yandex.ru')
+    +contact('phone','+7 (999) 528-59-05')
     +contact('web','www.yoursitename.com')
-    +contact('loc','New York')
+    +contact('loc','Санкт-Петербург')
