--- a/src/blocks/exp/exp.pug
+++ b/src/blocks/exp/exp.pug
@@ -1,7 +1,7 @@
 mixin exp(modifier)
   .exp&attributes(attributes)
     .exp__content 
-      +stitle('exp','experience')
+      +stitle('exp','Опыт')
       .exp__info
         h3.exp__company Blue Moon Consultency Studio
         p.exp__post Seniour UI designer
