--- a/src/blocks/hobbies/hobbies.pug
+++ b/src/blocks/hobbies/hobbies.pug
@@ -1,11 +1,11 @@
 mixin hobbies(modifier)
   .hobbies&attributes(attributes)
     .hobbies__content 
-      h2.hobbies__title Hobbies
+      h2.hobbies__title Хобби
       .hobbies__hobbies 
         .hobbies__block
           img(src="img/Reading.png", alt="Книга").hobbies__hobbie
-          span.hobbies__text Reading
+          span.hobbies__text Чтение
         .hobbies__block
           img(src="img/Dance.png", alt="Танец").hobbies__hobbie
           span.hobbies__text Dance
@@ -14,4 +14,4 @@ mixin hobbies(modifier)
           span.hobbies__text Singing
         .hobbies__block
           img(src="img/football.png", alt="Мяч").hobbies__hobbie
-          span.hobbies__text Football
+          span.hobbies__text Игры
