--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -1,7 +1,7 @@
 mixin info(modifier)
   .info&attributes(attributes)
-    img(src="img/mee.png" alt="Аватарка").info__image
+    img(src="img/me.png" alt="Аватарка").info__image
     .info__info
-      h1.info__name Folly
-      h2.info__namesurname Justin
-      h2.info__namepost UI/UX Designer
+      h1.info__name Александр
+      h2.info__namesurname Вербин
+      h2.info__namepost HTML-Верстальщик
