--- a/src/blocks/knowledge/knowledge.pug
+++ b/src/blocks/knowledge/knowledge.pug
@@ -1,10 +1,10 @@
 mixin knowledge(modifier)
   .knowledge&attributes(attributes)
     .knowledge__content 
-      h2.knowledge__title Industry Knowledge
-      p.knowledge__item User Interface
-      p.knowledge__item User Experience 
-      p.knowledge__item Product Design 
-      p.knowledge__item Interaction Design
-      p.knowledge__item Design Research
-      p.knowledge__item Web Design
+      h2.knowledge__title Навыки
+      p.knowledge__item Кроссбраузерная вёрстка
+      p.knowledge__item Адаптивная вёрстка 
+      p.knowledge__item Использование jQuery 
+      p.knowledge__item Применение шаблонизатора Pug
+      p.knowledge__item Применение предпроцессора SCSS
+      p.knowledge__item Взаимодействие с Figma при вёрстке
