--- a/src/blocks/languages/languages.pug
+++ b/src/blocks/languages/languages.pug
@@ -1,25 +1,18 @@
 mixin languages(modifier)
   .languages&attributes(attributes)
     .languages__content 
-      h2.languages__title Languages
+      h2.languages__title Владение Языками
+      .languages__block
+        p.languages__language Русский
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item
       .languages__block
         p.languages__language English
         .languages__item
         .languages__item
         .languages__item
-        .languages__item
-        .languages__item
-      .languages__block
-        p.languages__language Hindi
-        .languages__item
-        .languages__item
-        .languages__item
-        .languages__item
-        .languages__item.languages__item--white
-      .languages__block
-        p.languages__language french
-        .languages__item
-        .languages__item
-        .languages__item.languages__item--white
         .languages__item.languages__item--white
         .languages__item.languages__item--white
