--- a/src/blocks/othersk/othersk.scss
+++ b/src/blocks/othersk/othersk.scss
@@ -87,7 +87,7 @@
     }
     @media screen and (max-width: 600px){
         &__content{
-            margin-left: 0;
+            margin: 0;
         }
         &__skills{
             max-width: none;
