--- a/src/blocks/stitle/stitle.scss
+++ b/src/blocks/stitle/stitle.scss
@@ -16,7 +16,7 @@
         background: $stitle-color;
         text-transform: uppercase;
         border-radius: 5px;
-        padding: 4px 28px;
+        padding: 4px 28px 4px 16px;
         min-width: 154px;
         white-space: nowrap;
     }
