--- a/src/blocks/edu/edu.pug
+++ b/src/blocks/edu/edu.pug
@@ -1,11 +1,11 @@
 mixin edu(modifier)
   .edu&attributes(attributes)
     .edu__content 
-      +stitle('edu','education')
+      +stitle('edu','Образование')
       .edu__info
-        h3.edu__college Bachelor of Engineering in Information Technology 
-        p.edu__campus SCAT Education Campus
-        p.edu__date 2011-2015, New York
-        h3.edu__college NJIT Higher  
-        p.edu__campus AB Experiment Campus
-        p.edu__date 2009-2011, New York
+        h3.edu__college ГБОУ ПСК "Санкт-Петербурский центр подготовки спасателей" 
+        p.edu__campus Защита в чрезвычайных ситуациях
+        p.edu__date 2013-2017, Санкт-Петербург
+        h3.edu__college Самообучение в HTML-Academy  
+        p.edu__campus Основы HTML,CSS и JavaScript
+        p.edu__date 2021-2022, Санкт-Петербург
