--- a/src/blocks/edu/edu.scss
+++ b/src/blocks/edu/edu.scss
@@ -26,7 +26,7 @@
     }
     @media screen and (max-width: 600px){
         &__content{
-            margin-left: 0;
+            margin: 0;
         }
         &__info{
             display: none;
