--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -6,7 +6,8 @@
         object-fit: contain;
         margin-top: 4px;
         margin-right: 10px;
-        transform: scale(0.9);
+        width: 110px;
+        height: 116px;
     }
     &__info{
         margin-top: 14px;
