--- a/src/blocks/myskills/myskills.pug
+++ b/src/blocks/myskills/myskills.pug
@@ -1,11 +1,11 @@
 mixin myskills(modifier)
   .myskills&attributes(attributes)
     .myskills__content 
-      +stitle('myskills','my skills')
+      +stitle('myskills','Навыки')
       .myskills__info
         .myskills__skills
           .myskills__skill
-            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+            <div class="pie animate no-round" style="--p:50;--c:#3B5999;">   
               .myskills__image
                 | <svg width="20" height="30" viewBox="0 0 20 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 |   <g clip-path="url(#clip0_288_140)">
@@ -24,61 +24,26 @@ mixin myskills(modifier)
             </div>
             p.myskills__text Figma 
           .myskills__skill  
-            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+            <div class="pie animate no-round" style="--p:70;--c:#3B5999;">   
             .myskills__image
-              | <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              |   <path d="M25 25H0V0H25V25Z" fill="#00C3FF"/>
-              |   <path d="M25 25H12.5V0H25V25Z" fill="#00C3FF"/>
-              |   <path d="M23.5352 23.5352H1.46484V1.46484H23.5352V23.5352Z" fill="#063E8B"/>
-              |   <path d="M23.5352 23.5352H12.5V1.46484H23.5352V23.5352Z" fill="#063E8B"/>
-              |   <path d="M12.5001 21.9911C11.9131 21.9911 11.3613 21.7625 10.9463 21.3475L3.65264 14.0538C3.2376 13.6388 3.00903 13.087 3.00903 12.5C3.00903 11.9131 3.2376 11.3613 3.65264 10.9463L10.9463 3.65264C11.3613 3.2376 11.9131 3.00903 12.5001 3.00903C13.087 3.00903 13.6388 3.2376 14.0538 3.65264L21.3475 10.9463C21.7625 11.3613 21.9911 11.9131 21.9911 12.5C21.9911 13.087 21.7625 13.6388 21.3475 14.0538L14.0538 21.3475C13.6388 21.7625 13.087 21.9911 12.5001 21.9911ZM12.5001 4.47388C12.3044 4.47388 12.1205 4.5501 11.9821 4.68843L4.68843 11.9821C4.5501 12.1205 4.47388 12.3044 4.47388 12.5C4.47388 12.6957 4.5501 12.8796 4.68843 13.018L11.9821 20.3117C12.1205 20.45 12.3044 20.5262 12.5001 20.5262C12.6957 20.5262 12.8796 20.45 13.018 20.3117L20.3117 13.018C20.45 12.8796 20.5262 12.6957 20.5262 12.5C20.5262 12.3044 20.45 12.1205 20.3117 11.9821L13.018 4.68843C12.8796 4.5501 12.6957 4.47388 12.5001 4.47388Z" fill="#CCEFFF"/>
-              |   <path d="M21.3474 10.9463L14.0537 3.65264C13.6387 3.2376 13.0869 3.00903 12.5 3.00903V4.47388C12.6957 4.47388 12.8795 4.5501 13.0179 4.68843L20.3116 11.9821C20.45 12.1205 20.5262 12.3044 20.5262 12.5C20.5262 12.6957 20.45 12.8796 20.3116 13.018L13.0179 20.3117C12.8796 20.45 12.6957 20.5262 12.5 20.5262V21.9911C13.0869 21.9911 13.6387 21.7625 14.0537 21.3475L21.3474 14.0538C21.7625 13.6388 21.991 13.087 21.991 12.5C21.991 11.9131 21.7625 11.3613 21.3474 10.9463Z" fill="#CCEFFF"/>
-              |   <path d="M15.0889 15.2148C14.1439 15.2148 13.4717 14.7852 13.2373 14.582L13.6279 13.9258C13.8779 14.1029 14.4532 14.4648 15.0654 14.4648C15.4623 14.4648 15.7373 14.2985 15.7373 14.0117C15.7373 13.6597 15.1565 13.5457 14.8389 13.457C14.5732 13.3841 13.3779 13.2162 13.3779 12.3164C13.3779 11.4502 14.1317 10.9648 14.9873 10.9648C15.8854 10.9648 16.3649 11.3295 16.5889 11.5273L16.167 12.1602C15.9586 12.0039 15.4948 11.707 14.9795 11.707C14.5997 11.707 14.3545 11.8693 14.3545 12.168C14.3545 12.5407 15.0081 12.6472 15.1592 12.6836C15.4404 12.7566 16.7451 12.9557 16.7451 13.918C16.7451 15.0553 15.5993 15.2148 15.0889 15.2148Z" fill="#00C3FF"/>
-              |   <path d="M8.77637 15.1367V9.58984H11.1279C12.2042 9.58984 12.8936 10.5794 12.8936 11.4336C12.8936 12.4403 12.1283 13.2773 11.167 13.2773H9.85449V15.1367H8.77637ZM9.85449 12.332H11.1045C11.4827 12.332 11.7998 11.9792 11.7998 11.4336C11.7998 10.9648 11.5152 10.5352 11.0576 10.5352H9.85449V12.332Z" fill="#00C3FF"/>
-              |   <path d="M12.5 10.2983V12.6039C12.7464 12.284 12.8937 11.8751 12.8937 11.4336C12.8937 11.0482 12.7529 10.6355 12.5 10.2983Z" fill="#00C3FF"/>
-              | </svg>
+                | <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                |   <path d="M0 0L1.75734 26.256L12.5 30L23.2427 26.256L25 0H0Z" fill="#FF7816"/>
+                |   <path d="M20.3084 7.96875H8.02381L8.32213 12.3633H20.0101L19.2971 23.0038L12.5 25.4121L5.70285 23.0038L5.47079 19.4531H8.78645L8.85272 20.4199L12.5 21.703L16.1472 20.4199L16.4455 15.8789H5.22212L4.45947 4.45312H20.5404L20.3084 7.96875Z" fill="#ECECF1"/>
+                | </svg>
             </div>
-            p.myskills__text Adobe Photoshop 
+            p.myskills__text HTML 5 
           .myskills__skill  
-            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+            <div class="pie animate no-round" style="--p:65;--c:#3B5999;">   
             .myskills__image
-              | <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              |   <path d="M25 25H0V0H25V25Z" fill="#FEC478"/>
-              |   <path d="M25 25H12.5V0H25V25Z" fill="#FEC478"/>
-              |   <path d="M23.5352 23.5352H1.46484V1.46484H23.5352V23.5352Z" fill="#994C0F"/>
-              |   <path d="M23.5352 23.5352H12.5V1.46484H23.5352V23.5352Z" fill="#994C0F"/>
-              |   <path d="M10.1318 8.86719H11.5615L14.7256 17.1875H13.0615L12.2881 15.1133H9.38184L8.62012 17.1875H6.95605L10.1318 8.86719ZM11.9951 13.9766L10.8467 10.707L9.65137 13.9766H11.9951Z" fill="#FEC478"/>
-              |   <path d="M15.4873 10.1914V8.63281H17.0576V10.1914H15.4873ZM15.4873 17.1875V11.0469H17.0576V17.1875H15.4873Z" fill="#FEC478"/>
-              |   <path d="M12.5 11.3347V15.6813L13.0616 17.1874H14.7257L12.5 11.3347Z" fill="#FEC478"/>
-              | </svg>
+                | <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                |   <path d="M0 0L2.27679 27L12.5 30L22.7196 27.0019L25 0H0Z" fill="#2196F3"/>
+                |   <path d="M20.1321 8.82939L19.8446 12.2213L18.9768 22.3894L12.5 24.27L12.4946 24.2719L6.02141 22.3894L5.56962 17.0719H8.74105L8.97677 19.83L12.4964 20.8275L12.4982 20.8256L16.0232 19.8281L16.5036 15.2325L5.41784 15.2644L5.10355 12.1219L16.7696 11.9775L17.0053 8.61377L4.79105 8.64939L4.58569 5.52002H12.5H20.4143L20.1321 8.82939Z" fill="#FAFAFA"/>
+                | </svg>
             </div>
-            p.myskills__text Adobe illustrator 
+            p.myskills__text CSS 3 
           .myskills__skill  
-            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+            <div class="pie animate no-round" style="--p:40;--c:#3B5999;">   
             .myskills__image
-              | <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              |   <path d="M25 25H0V0H25V25Z" fill="#FF80E4"/>
-              |   <path d="M25 25H12.5V0H25V25Z" fill="#FF80E4"/>
-              |   <path d="M23.5352 23.5352H1.46484V1.46484H23.5352V23.5352Z" fill="#7F1363"/>
-              |   <path d="M23.5352 23.5352H12.5V1.46484H23.5352V23.5352Z" fill="#7F1363"/>
-              |   <path d="M7.15137 8.86719L9.22559 11.9609L11.2881 8.86719H13.0342L10.0693 13.0859L12.9404 17.1875H11.1943L9.22559 14.2109L7.24517 17.1875H5.48735L8.35845 13.0859L5.39355 8.86719H7.15137Z" fill="#FF80E4"/>
-              |   <path d="M15.9053 17.3047C14.1025 17.3047 12.9873 15.802 12.9873 14.1172C12.9873 12.207 14.2734 10.9414 15.7295 10.9414C16.963 10.9414 17.6004 11.7734 17.8037 12.125V8.63281H19.374V15.3828C19.374 15.5469 19.6043 15.8439 19.7373 15.8516V17.1875C19.4637 17.2421 19.241 17.2695 19.0692 17.2695C17.9354 17.2695 18.038 16.1211 18.038 16.1211C17.8114 16.5119 17.1359 17.3047 15.9053 17.3047ZM16.3155 15.9688C17.3008 15.9688 17.749 15.086 17.8037 14.9375V13.4727C17.7411 13.3009 17.1787 12.2774 16.2217 12.2774C15.1523 12.2774 14.6163 13.3382 14.6163 14.1524C14.6163 15.0472 15.2744 15.9688 16.3155 15.9688Z" fill="#FF80E4"/>
-              |   <path d="M12.5 8.86719V9.62739L13.0342 8.86719H12.5Z" fill="#FF80E4"/>
-              |   <path d="M12.5 17.1874H12.9405L12.5 16.5581V17.1874Z" fill="#FF80E4"/>
-              | </svg>
+              img(src="img/javascript.png").myskills__imag
             </div>
-            p.myskills__text Adobe Xd 
-          .myskills__skill  
-            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
-            .myskills__image
-              | <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              |   <path d="M25 25H0V0H25V25Z" fill="#FF5F96"/>
-              |   <path d="M25 25H12.5V0H25V25Z" fill="#FF5F96"/>
-              |   <path d="M23.5352 23.5352H1.46484V1.46484H23.5352V23.5352Z" fill="#7F1D32"/>
-              |   <path d="M23.5352 23.5352H12.5V1.46484H23.5352V23.5352Z" fill="#7F1D32"/>
-              |   <path d="M8.02051 17.1875V8.86719H9.63765V17.1875H8.02051Z" fill="#FF5F96"/>
-              |   <path d="M13.6924 17.3047C11.8896 17.3047 10.7744 15.802 10.7744 14.1172C10.7744 12.207 12.0605 10.9414 13.5166 10.9414C14.7501 10.9414 15.3875 11.7734 15.5908 12.125V8.63281H17.1611V15.3828C17.1611 15.5469 17.3915 15.8439 17.5244 15.8516V17.1875C17.2508 17.2421 17.0281 17.2695 16.8563 17.2695C15.7225 17.2695 15.8251 16.1211 15.8251 16.1211C15.5985 16.5119 14.923 17.3047 13.6924 17.3047ZM14.1025 15.9688C15.0878 15.9688 15.536 15.086 15.5908 14.9375V13.4727C15.5282 13.3009 14.9657 12.2774 14.0088 12.2774C12.9394 12.2774 12.4033 13.3382 12.4033 14.1524C12.4033 15.0472 13.0615 15.9688 14.1025 15.9688Z" fill="#FF5F96"/>
-              |   <path d="M17.1611 15.3828V8.63281H15.5908V12.125C15.3876 11.7734 14.7501 10.9414 13.5166 10.9414C13.1623 10.9414 12.8182 11.0169 12.5 11.1579V13.5291C12.6981 12.8823 13.2013 12.2773 14.0088 12.2773C14.9658 12.2773 15.5282 13.3009 15.5908 13.4726V14.9375C15.5361 15.086 15.0878 15.9687 14.1026 15.9687C13.2952 15.9687 12.7184 15.4143 12.5 14.7481V17.0539C12.8523 17.2143 13.2517 17.3046 13.6925 17.3046C14.9231 17.3046 15.5986 16.5118 15.8253 16.121C15.8253 16.121 15.7227 17.2695 16.8565 17.2695C17.0283 17.2695 17.2509 17.242 17.5245 17.1874V15.8515C17.3915 15.8438 17.1611 15.5469 17.1611 15.3828Z" fill="#FF5F96"/>
-              | </svg>
-            </div>
-            p.myskills__text Adobe indesign 
+            p.myskills__text JavaScript 
