--- a/src/blocks/social/social.pug
+++ b/src/blocks/social/social.pug
@@ -1,8 +1,6 @@
 mixin social(modifier)
   .social&attributes(attributes)
     .social__content 
-      h2.social__title Social
-      a(href="#").social__link Yoursitename.com
-      a(href="#").social__link linkedin.com/in/YourName
-      a(href="#").social__link dribbble.com/YourName 
-      a(href="#").social__link behance.com/YourName
+      h2.social__title Мои контакты
+      a(href="https://vk.com/werbin" target="_blank").social__link Вконтакте
+      a(href="https://github.com/Alexander-Verbin" target="_blank").social__link GitHub
