chenge content in block exp

--- a/src/blocks/exp/exp.pug
+++ b/src/blocks/exp/exp.pug
@@ -3,11 +3,11 @@ mixin exp(modifier)
     .exp__content 
       +stitle('exp','Опыт')
       .exp__info
-        h3.exp__company Blue Moon Consultency Studio
-        p.exp__post Seniour UI designer
-        p.exp__date Aug 2020 - Present - 1 year, New York
-        p.exp__text Product team to prototype, design and deliver the UI and UX experience with a lean design process: research, design, test, and iterate.
-        h3.exp__company Black Yark product design
-        p.exp__post Seniour UX designer
-        p.exp__date Aug 2015 - Aug 2020 - 5 year, New York
-        p.exp__text Lead the UI design with the accountability of the design system, collaborated with product and development teams on core projects to improve product interfaces and experiences.
+        h3.exp__company Самообучение в HTML Academy
+        p.exp__post Ученик
+        p.exp__date Октябрь 2021 - Март 2022, Санкт-Петербург
+        p.exp__text Изучение основ HTML 5, CSS 3 и JavaScript. Прошел курс для получение базовых знаний в разработке веб-сайтов.
+        h3.exp__company "Гильдия Фронтов"
+        p.exp__post Ученик
+        p.exp__date Октябрь 2021 - по настоящее время, Санкт-Петербург
+        p.exp__text Дополнительно изучение HTML 5, CSS 3 и JavaScript под руководством двух middle-frontend разработчиков, выполнение тренировочного проект в рамках прохождения обучения.
