--- a/src/blocks/contacts/contacts.pug
+++ b/src/blocks/contacts/contacts.pug
@@ -1,6 +1,6 @@
 mixin contacts(modifier)
   .contacts&attributes(attributes)
-    +contact('mail','sash.verbin@yandex.ru')
-    +contact('phone','+7 (999) 528-59-05')
-    +contact('web','www.yoursitename.com')
+    +contact('mail','sash.verbin@yandex.ru','mailto:sash.verbin@yandex.ru')
+    +contact('phone','+7 (999) 528-59-05','tel:+79995285905')
+    +contact('web','https://alexander-verbin.github.io/mysite/','https://alexander-verbin.github.io/mysite/')
     +contact('loc','Санкт-Петербург')
