--- a/src/blocks/exp/exp.pug
+++ b/src/blocks/exp/exp.pug
@@ -10,4 +10,4 @@ mixin exp(modifier)
         h3.exp__company "Гильдия Фронтов"
         p.exp__post Ученик
         p.exp__date Октябрь 2021 - по настоящее время, Санкт-Петербург
-        p.exp__text Дополнительно изучение HTML 5, CSS 3 и JavaScript под руководством двух middle-frontend разработчиков, выполнение тренировочного проект в рамках прохождения обучения.
+        p.exp__text Дополнительно изучение HTML 5, CSS 3 и JavaScript, Изучение методологии БЭМ, а так же получил опыт работы с Figma, Perfect Pixel, системой контроля версий Git и использование репозитория на GitHub, шаблонизатором Pug, предпроцессором SCSS, под руководством двух middle-frontend разработчиков, выполнение тренировочного проект в рамках пройденого материала.
