--- a/src/blocks/knowledge/knowledge.pug
+++ b/src/blocks/knowledge/knowledge.pug
@@ -8,3 +8,5 @@ mixin knowledge(modifier)
       p.knowledge__item Применение шаблонизатора Pug
       p.knowledge__item Применение предпроцессора SCSS
       p.knowledge__item Взаимодействие с Figma при вёрстке
+      p.knowledge__item Верстка по методологии БЭМ
+      p.knowledge__item Применение Git
