--- a/src/blocks/contact/contact.pug
+++ b/src/blocks/contact/contact.pug
@@ -1,5 +1,5 @@
-mixin contact(image,text)
+mixin contact(image,text,link='#')
   .contact&attributes(attributes)
-    .contact__content 
+    a(href=link target="_blank").contact__content 
       img(src=`img/${image}.svg` alt="Иконка").contact__image
       p.contact__text=text
