--- a/src/blocks/contact/contact.scss
+++ b/src/blocks/contact/contact.scss
@@ -8,6 +8,7 @@
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
         max-width: 260px;
+        text-decoration: none;
         &:hover {
             transform: scale(1.04);
             @include transition;
