--- a/src/blocks/othersk/othersk.scss
+++ b/src/blocks/othersk/othersk.scss
@@ -1,99 +1,20 @@
-@property --p {
-    syntax: '<number>';
-    inherits: true;
-    initial-value: 0;
-}
 .othersk {
-    .pie {
-        --p:20;
-        --b:5px;
-        --c:darkred;
-        --w:60px;
-        
-        width:var(--w);
-        aspect-ratio:1;
-        position:relative;
-        display:inline-grid;
-        place-content:center;
-        font-size:25px;
-        font-weight:bold;
-        font-family:sans-serif;
-    }
-    .pie:before,
-    .pie:after {
-    content:"";
-    position:absolute;
-    border-radius:50%;
-    }
-    .pie:before {
-    inset:0;
-    background:
-        radial-gradient(farthest-side,var(--c) 98%,#0000) top/var(--b) var(--b) no-repeat,
-        conic-gradient(var(--c) calc(var(--p)*1%),#0000 0);
-    -webkit-mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
-            mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
-    }
-    .pie:after {
-    inset:calc(50% - var(--b)/2);
-    background:var(--c);
-    transform:rotate(calc(var(--p)*3.6deg)) translateY(calc(50% - var(--w)/2));
-    }
-    .animate {
-    animation:p 1s .5s both;
-    }
-    .no-round:before {
-    background-size:0 0,auto;
-    }
-    .no-round:after {
-    content:none;
-    }
     &__content {
         margin-left: 8px;
     }
-    &__skills {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 296px;
+    &__list{
+        list-style: none;
     }
-    &__skill {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 6px 8px 14px;
-        min-width: 73px;
-        &:first-child{
-            margin-left: 2px;
-        }
-    }
-    &__image {
-        background-color: rgba(196, 196, 196, 0.4);
-        border-radius: 50%;
-        width: 44px;
-        height: 44px;
-        @include flex-dir;
-    }
-    &__text {
-        font-family: "Montserrat";
-        font-weight: 600;
-        font-size: px-to-em(14);
+    &__link{
+        font-family: "Calibri";
+        font-weight: 700;
+        font-size: 0.8em;
         line-height: px-to-per(18, 14);
-        color: $stitle-color;
-        text-align: center;
-        max-width: 80px;
-        text-transform: uppercase;
-        &:last-of-type{
-            text-transform: none;
-        }
+        color: $sidebar-color;
     }
     @media screen and (max-width: 600px){
         &__content{
             margin: 0;
-        }
-        &__skills{
-            max-width: none;
-        }
-        &__skill{
-            margin: 10px 0 10px 0;
         }
         &__info{
             display: none;
@@ -104,8 +25,4 @@
             }
         }
     }
-}
-@keyframes p {
-    from{--p:0}
-}
-
+    }
