--- a/src/blocks/othersk/othersk.pug
+++ b/src/blocks/othersk/othersk.pug
@@ -14,5 +14,10 @@ mixin othersk(modifier)
             | &ensp;(
             a(href="https://github.com/Alexander-Verbin/coffee" target="_blank").othersk__link GitHub
             | )
+          li.othersk__item 
+            a(href="portfolio/test-wispo/index.html" target="_blank").othersk__link Тест для WISPO
+            | &ensp;(
+            a(href="https://github.com/Alexander-Verbin/wispo-test" target="_blank").othersk__link GitHub
+            | )
 
             
